--- a/templates/islandora-solr-search-navigation.html.twig
+++ b/templates/islandora-solr-search-navigation.html.twig
@@ -1,4 +1,4 @@
-<?php
+{#
 /**
  * @file
  * Islandora solr search navigation block.
@@ -9,10 +9,8 @@
  * - $next_link: link to next object in the search result.
  *
  */
-?>
+#}
 
-
-  <div id="islandora-solr-search-return-link"><?php print $return_link; ?></div>
-  <div id="islandora-solr-search-prev-link"><?php print $prev_link; ?></div>
-  <div id="islandora-solr-search-next-link"><?php print $next_link; ?></div>
-
+<div id="islandora-solr-search-return-link">{{ return_link }}</div>
+<div id="islandora-solr-search-prev-link">{{ prev_link }}</div>
+<div id="islandora-solr-search-next-link">{{ next_link }}</div>
