--- a/islandora_solr_config/templates/islandora-solr-grid.html.twig
+++ b/islandora_solr_config/templates/islandora-solr-grid.html.twig
@@ -9,7 +9,6 @@
  * @see template_preprocess_islandora_solr_grid()
  */
 #}
-
 {% if results is empty %}
   <p class="no-results">{{ 'Sorry, but your search returned no results.'|t }}</p>
 {% else %}
@@ -18,34 +17,10 @@
     {% for result in results %}
       <dl class="solr-grid-field">
         <dt class="solr-grid-thumb">
-          <?php
-            // @FIXME
-// url() expects a route name or an external URI.
-// $image = '<img src="' . url($result['thumbnail_url'], array('query' => $result['thumbnail_url_params'])) . '" alt="' . $result['object_label'] . '"/>';
-
-            // @FIXME
-// l() expects a Url object, created from a route name or external URI.
-// print l($image, $result['object_url'], array(
-//               'html' => TRUE,
-//               'query' => $result['object_url_params'],
-//               'fragment' => isset($result['object_url_fragment']) ? $result['object_url_fragment'] : '',
-//               'attributes' => array('title' => $result['object_label']),
-//             ));
-
-          ?>
+          {{ result.thumbnail_link }}
         </dt>
         <dd class="solr-grid-caption">
-          <?php
-            $object_label = isset($result['object_label']) ? $result['object_label'] : '';
-            // @FIXME
-// l() expects a Url object, created from a route name or external URI.
-// print l($object_label, $result['object_url'], array(
-//               'query' => $result['object_url_params'],
-//               'fragment' => isset($result['object_url_fragment']) ? $result['object_url_fragment'] : '',
-//               'attributes' => array('title' => $result['object_label']),
-//             ));
-
-          ?>
+          {{ result.label_link }}
         </dd>
       </dl>
     {% endfor %}
