--- a/css/islandora_solr.base.css
+++ b/css/islandora_solr.base.css
@@ -1,49 +1,38 @@
 /* Base style sheet for islandora solr */
 
-
 /* solr results wrapper elements */
-
-#islandora-solr-top
-{
+#islandora-solr-top {
   min-height: 25px;
 }
 
 /* Secondary display profiles */
-ul#secondary-display-profiles
-{
-  float:right;
+ul#secondary-display-profiles {
+  float: right;
   margin: 0px 0px 0px 0px;
 }
 
-.item-list ul#secondary-display-profiles li
-{
+.item-list ul#secondary-display-profiles li {
   display: inline-block;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   background-image: none;
 }
 
-
 /* facets */
-
 .block ul.islandora-solr-facet {
   padding: 0 0 0 1em;
 }
 
 /* hide the 2nd list if a facet list is split in two */
-.islandora-solr-facet.hidden
-{
+.islandora-solr-facet.hidden {
   display: none;
 }
 
-.plusminus
-{
+.plusminus {
   float: right;
 }
 
-
 /* advanced search block */
-
 #islandora-solr-advanced-search-form div.form-item {
   display: inline-block;
   margin-right: 10px;
