--- a/css/islandora_solr.theme.css
+++ b/css/islandora_solr.theme.css
@@ -42,6 +42,7 @@ dl.solr-fields {
 .solr-fields dt,
 .solr-fields dd {
   border-top: 1px solid #ddd;
+  word-wrap: break-word;
 }
 
 .solr-fields dt.first,
