Nuke unnecessary file entry and document the template.

--- a/templates/islandora-solr-facet-wrapper.html.twig
+++ b/templates/islandora-solr-facet-wrapper.html.twig
@@ -1,3 +1,15 @@
+{#
+/**
+ * @file
+ * Default theme implementation for a islandora_solr_facet_wrapper.
+ *
+ * Available variables:
+ * - title: The title for this facet.
+ * - content: The content for this facet.
+ *
+ * @ingroup themeable
+ */
+#}
 <div class="islandora-solr-facet-wrapper">
   <h3>{{title}}</h3>
   {{content}}
